--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -10,13 +10,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        submodules: true
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
     - name: Install dependencies
-      run: npm ci
+      run: npm ci --force
     - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
+      run: npx playwright install --with-deps --force
+    - name: Start HTTP Server
+      run: npx http-server ./lgtest -p 5500 &
     - name: Run Playwright tests
       run: npx playwright test
     - uses: actions/upload-artifact@v4
