--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@argos-ci/playwright": "^6.3.1",
     "@playwright/test": "^1.56.1",
     "@types/node": "^24.10.0"
   }
